--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "custom-electron-titlebar": "^3.2.10",
     "electron": "^16.0.6"
   }
 }
