--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "custom-electron-titlebar": "^3.2.10",
-    "electron": "^16.0.6"
+    "electron": "^16.0.6",
+    "electron-reload": "^2.0.0-alpha.1"
   }
 }
